# RTR_Metal

./: .gitignore  AGENTS.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  Package.resolved  Package.swift  README.md  build_metallib.sh  hardware64.ppm  hardware64_debug_mario5.ppm  mps.ppm  rt_hw.ppm  rt_mps.ppm
Sources/RTRMetalEngine/Core/: MetalContext.swift
Sources/RTRMetalEngine/Rendering/: AccelerationStructures.swift  RayTracingPipeline.swift  Renderer.swift  RendererError.swift
Sources/RTRMetalEngine/Scene/: Camera.swift  Scene.swift  SceneFactory.swift
Sources/RTRMetalEngine/Shaders/: MetalRayTracing.metal  ShaderTypes.swift  default.metallib
Sources/RTRMetalExample/: RTRMetalExampleApp.swift
Tests/RTRMetalEngineTests/: RTRMetalEngineTests.swift
build-xcode/: CMakeCache.txt  CTestTestfile.cmake  RTRMetalTests[1]_include.cmake  cmake_install.cmake
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/Debug/: RTRMetalSample  hardware64_debug_mario6.ppm  renderer_output.ppm
build-xcode/Debug/RTRMetalOnScreenSample.doccarchive/: metadata.json
build-xcode/Debug/RTRMetalOnScreenSample.doccarchive/data/documentation/: rtrmetalonscreensample.json
build-xcode/Debug/RTRMetalOnScreenSample.doccarchive/data/documentation/rtrmetalonscreensample/: rtrappdelegate.json  rtrviewcontroller.json
build-xcode/Debug/RTRMetalOnScreenSample.doccarchive/index/: data.mdb  index.json  navigator.index
build-xcode/RTRMetal.xcodeproj/: project.pbxproj
build-xcode/RTRMetal.xcodeproj/project.xcworkspace/xcuserdata/yanbing.xu.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/RTRMetal.xcodeproj/xcshareddata/xcschemes/: RTRMetalOnScreenSample.xcscheme  RTRMetalSample.xcscheme
build-xcode/RTRMetal.xcodeproj/xcuserdata/yanbing.xu.xcuserdatad/xcschemes/: xcschememanagement.plist
build-xcode/shaders/: RTRRayTracing.air  RTRShaders.metallib
build-xcode/shaders/metal_module_cache/3H190ZRPTXLN3/: __bits_metal_depth2d-197D2AH0DF7LO.pcm  __bits_metal_depth2d_array-197D2AH0DF7LO.pcm  __bits_metal_depth2d_ms-197D2AH0DF7LO.pcm  __bits_metal_depth2d_ms_array-197D2AH0DF7LO.pcm  __bits_metal_depthcube-197D2AH0DF7LO.pcm  __bits_metal_depthcube_array-197D2AH0DF7LO.pcm  __bits_metal_texture1d-197D2AH0DF7LO.pcm  __bits_metal_texture1d_array-197D2AH0DF7LO.pcm  __bits_metal_texture2d-197D2AH0DF7LO.pcm  __bits_metal_texture2d_array-197D2AH0DF7LO.pcm  __bits_metal_texture2d_ms-197D2AH0DF7LO.pcm  __bits_metal_texture2d_ms_array-197D2AH0DF7LO.pcm  __bits_metal_texture3d-197D2AH0DF7LO.pcm  __bits_metal_texture_buffer-197D2AH0DF7LO.pcm  __bits_metal_texture_common-197D2AH0DF7LO.pcm  __bits_metal_texturecube-197D2AH0DF7LO.pcm  __bits_metal_texturecube_array-197D2AH0DF7LO.pcm  metal_array-197D2AH0DF7LO.pcm  metal_atomic-197D2AH0DF7LO.pcm  metal_command_buffer-197D2AH0DF7LO.pcm  metal_common-197D2AH0DF7LO.pcm  metal_compute-197D2AH0DF7LO.pcm  metal_curves-197D2AH0DF7LO.pcm  metal_functional-197D2AH0DF7LO.pcm  metal_geometric-197D2AH0DF7LO.pcm  metal_graphics-197D2AH0DF7LO.pcm  metal_imageblocks-197D2AH0DF7LO.pcm  metal_initializer_list-197D2AH0DF7LO.pcm  metal_integer-197D2AH0DF7LO.pcm  metal_interpolate-197D2AH0DF7LO.pcm  metal_limits-197D2AH0DF7LO.pcm  metal_logging-197D2AH0DF7LO.pcm  metal_math-197D2AH0DF7LO.pcm  metal_matrix-197D2AH0DF7LO.pcm  metal_mesh-197D2AH0DF7LO.pcm  metal_numeric-197D2AH0DF7LO.pcm  metal_pack-197D2AH0DF7LO.pcm  metal_pixel-197D2AH0DF7LO.pcm  metal_quadgroup-197D2AH0DF7LO.pcm  metal_raytracing-197D2AH0DF7LO.pcm  (+10 more)
config/: engine.ini
docs/: Development_Guidelines.md  Documentation_Index.md  OfficialMetalSampleStudy.md  RTX_Debug_Summary.md  RTX_Design_Notes.md  Stage3C_OnScreenDemo.md  architecture.md  development_plan.md  development_update_stage3.md  mario_obj_blas_issue.md  mps_cpu_gpu_alignment.md  mps_gpu_pipeline_plan.md  mps_progress_explained.md  mps_stage3_status.md  project_overview.md
engine/include/RTRMetalEngine/Core/: ConfigLoader.hpp  EngineConfig.hpp  FileSystem.hpp  ImageLoader.hpp  Logger.hpp  Math.hpp
engine/include/RTRMetalEngine/MPS/: MPSMaterial.hpp  MPSPathTracer.hpp  MPSRenderer.hpp  MPSSceneConverter.hpp  MPSUniforms.hpp
engine/include/RTRMetalEngine/Rendering/: AccelerationStructure.hpp  AccelerationStructureBuilder.hpp  BufferAllocator.hpp  GeometryStore.hpp  MetalContext.hpp  RayTracingPipeline.hpp  RayTracingShaderTypes.h  Renderer.hpp
engine/include/RTRMetalEngine/Scene/: CornellBox.hpp  DemoScenes.hpp  Material.hpp  Mesh.hpp  OBJLoader.hpp  Scene.hpp  SceneBuilder.hpp  Vertex.hpp
engine/src/Core/: ConfigLoader.cpp  FileSystem.cpp  ImageLoader.mm  Logger.cpp  Math.cpp  placeholder.cpp
engine/src/MPS/: MPSPathTracer.mm  MPSRenderer.mm  MPSSceneConverter.cpp
engine/src/Rendering/: AccelerationStructure.mm  AccelerationStructureBuilder.mm  BufferAllocator.mm  GeometryStore.cpp  MetalContext.mm  RayTracingPipeline.mm  Renderer.cpp  Renderer.mm
engine/src/Scene/: CornellBox.cpp  DemoScenes.cpp  Mesh.cpp  OBJLoader.cpp  Scene.cpp  SceneBuilder.cpp
sample/src/: SampleAppUtils.cpp  SampleAppUtils.hpp  main.cpp  mps_main.mm
sample/src/onscreen/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.mm  main.mm
shaders/: MPSUniforms.metal  RTRRayTracing.metal  RTRShaders.metal
tests/src/core/: ConfigLoaderTests.cpp  EngineConfigTests.cpp  LoggerTests.cpp  MathTests.cpp
tests/src/mps/: MPSRendererAccumulationTests.cpp  MPSRendererDeterminismTests.cpp  MPSRendererGpuHashTests.cpp  MPSRendererImageComparisonTests.mm  MPSRendererResolutionTests.mm  MPSSceneConverterTests.cpp
tests/src/rendering/: AccelerationStructureBuilderTests.cpp  AccumulationTests.cpp  BufferAllocatorTests.cpp  GeometryStoreTests.cpp  RendererTests.cpp
tests/src/scene/: SceneBuilderTests.cpp  SceneTests.cpp  ScenesTests.cpp
